portfolio-website/src/app/home/home.component.scss
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Fira Code', monospace;
}

#overlay {
    display: flex;
    color: white;
    position: absolute;
    z-index: 50;
    align-items: center;
    // justify-content: center;
    height: 100%;
    margin: 0 15%;
    // border: 2px solid red;
}

#overlay h3 {
    font-size: clamp(1rem, 1.2vw, 2.5rem);
    font-weight: 300;
    color: #33A18E;
}

#overlay h1 {
    font-size: clamp(2.2rem, 5.5vw, 14rem);
    font-weight: 700;
    color: white;
    letter-spacing: -2px;
}

#overlay h2 {
    font-size: clamp(1.6rem, 4vw, 10rem);
    font-weight: 300;
    color: #33A18E;
    letter-spacing: -1px;
}

.hero-text {
    line-height: 1;
}

.section-and-text {
    display: flex;
    justify-content: center;
    align-items: center;
    width: max(60%, 200px);
    max-width: 1000px;
}

.section-and-text p {
    font-size: clamp(0.8rem, 0.8vw, 1.8rem);
}

.section {
    display: flex;
    flex-direction: column;
    align-items: center;
    // height: 100%;
    // border: 2px solid green;
}

.section h4 {
    font-size: clamp(0.6rem, 0.8vw, 1.6rem);
    font-weight: 300;
    color: rgb(255, 255, 255, 0.2);
    margin: 2px 0;
    -webkit-user-select: none; /* Safari */
    -ms-user-select: none; /* IE 10 and IE 11 */
    user-select: none; /* Standard syntax */
}

.section .vertical-line {
    border-left: 1px solid rgb(255, 255, 255, 0.2);
    height: inherit;
}

#background-text {
    display: flex;
    font-size: clamp(1rem, 10vw, 30rem);
    font-weight: bold;
    color: rgb(0, 0, 0, 0.15);
    line-height: 1;
    justify-content: center;
    align-items: center;
    white-space: pre;
    height: 100vh;
    -webkit-user-select: none; /* Safari */
    -ms-user-select: none; /* IE 10 and IE 11 */
    user-select: none; /* Standard syntax */
}

.demo a {
    position: absolute;
    bottom: 80px;
    left: 50%;
    z-index: 150;
    display: inline-block;
    -webkit-transform: translate(0, -50%);
    transform: translate(0, -50%);
    color: #fff;
    font : normal 400 20px/1 'Josefin Sans', sans-serif;
    letter-spacing: .1em;
    text-decoration: none;
    transition: opacity .3s;
}
.demo a:hover {
    opacity: .5;
}
#section04 a span {
    position: absolute;
    top: 0;
    left: 50%;
    width: 32px;
    height: 32px;
    margin-left: -12px;
    border-left: 1px solid #fff;
    border-bottom: 1px solid #fff;
    -webkit-transform: rotate(-45deg);
    transform: rotate(-45deg);
    -webkit-animation: sdb04 2s infinite;
    animation: sdb04 2s infinite;
    box-sizing: border-box;
}
@-webkit-keyframes sdb04 {
    0% {
        -webkit-transform: rotate(-45deg) translate(0, 0);
    }
    20% {
        -webkit-transform: rotate(-45deg) translate(-10px, 10px);
    }
    40% {
        -webkit-transform: rotate(-45deg) translate(0, 0);
    }
}
@keyframes sdb04 {
    0% {
        transform: rotate(-45deg) translate(0, 0);
    }
    20% {
        transform: rotate(-45deg) translate(-10px, 10px);
    }
    40% {
        transform: rotate(-45deg) translate(0, 0);
    }
}

.fa_custom {
    position: absolute;
    bottom: 10px;
    left: 10px;
    font-size:22px;
    color: #bebebe;
    text-decoration: none;
}

@media screen and (max-width: 790px) {
    #overlay {
        margin: 0 10%;
    }
}

// body {
//     margin: 0;
//     font-family: teko, sans-serif; 
//     height: 100vh;
// }

// #hero-wrapper {
//     margin: 30px 400px;
//     margin-bottom: 150px;
// }

// .hero-sec {
//     color: white;
//     text-align: left;
// }

// .hero-sec h1 {
//     font-size: 80px;
//     font-weight: bold;
//     color: #ffffff;
//     max-width: 50%;
//     margin: 0;
// }

// .hero-sec p {
//     font-size: 20px;
//     margin-top: 20px;
//     margin-right: 50px;
//     color: #868686;
//     max-width: 100%;
// }

// @media screen and (max-width: 600px) {
  
// }

